<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/tv_username_user_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/tv_username_user_activity"
        android:textSize="26sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_blocked_user_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_blocked_user_activity"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/cb_blocked_user_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_limitation_user_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_limitation_user_activity"
            android:textSize="20sp" />


        <CheckBox
            android:id="@+id/cb_limitation_user_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_ok_user_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_ok_user_activity"
        android:textSize="20sp"
        android:layout_marginTop="40dp"
        android:layout_gravity="center"/>
</LinearLayout>