<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.artemqa.formloggingonelab.ui.ChangePasswordActivity">

    <EditText
        android:id="@+id/et_old_pass_cp_activity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="176dp"
        android:ems="10"
        android:hint="@string/et_old_pass_cp_activity"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_new_pass_cp_activity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="84dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/et_new_pass_cp_activity"
        android:inputType="textPassword"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_old_pass_cp_activity" />

    <EditText
        android:id="@+id/et_repeat_pass_cp_activity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="84dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/et_repeat_pass_cp_activity"
        android:inputType="textPassword"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_new_pass_cp_activity" />

    <Button
        android:id="@+id/btn_cp_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="82dp"
        android:text="@string/btn_cp_activity"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_repeat_pass_cp_activity" />


</android.support.constraint.ConstraintLayout>
