<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingBottom="10dp"
    android:paddingTop="10dp"
    tools:context="com.example.artemqa.formloggingonelab.ui.UserActivity">

    <TextView
        android:id="@+id/tv_username_item_recycler_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/tv_username_item_recycler_view"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <CheckBox
        android:id="@+id/cb_blocked_item_recycler_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_weight="1"
        android:text="@string/cb_blocked_item_recycler_view"
        android:textSize="10sp" />

    <CheckBox
        android:id="@+id/cb_limitation_item_recycler_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_weight="1"
        android:text="@string/cb_limitation_item_recycler_view"
        android:textSize="10sp" />

</LinearLayout>
