<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.artemqa.formloggingonelab.ui.AdminPanelActivity">

    <TextView
        android:id="@+id/tv_ap_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/tv_ap_activity"
        android:textSize="10sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp">

        <EditText
            android:id="@+id/et_ap_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="8"
            android:hint="@string/et_ap_activity"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/btn_ap_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/btn_ap_activity" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:layout_marginTop="16dp"
        android:id="@+id/rv_ap_activity"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
