<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.artemqa.formloggingonelab.ui.KeyActivity">

    <TextView
        android:id="@+id/tv_key_activity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginTop="146dp"
        android:text="@string/tv_key_activity"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="85dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/et_key_activity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="85dp"
        android:layout_marginStart="85dp"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/et_key_activity"
        android:inputType="numberPassword"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_key_activity" />

    <Button
        android:id="@+id/btn_key_activity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="129dp"
        android:layout_marginStart="129dp"
        android:layout_marginTop="42dp"
        android:text="@string/btn_key_activity"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_key_activity" />
</android.support.constraint.ConstraintLayout>
